# PI_Ground-Seg

./: CMakeLists.txt  package.xml
Zybo/BOOT/: image.ub  system.dtb
Zybo/Yocto/: bblayers.conf  ground-seg_1.0.0.bb  local.conf  ros1-melodic-thud.mcf
include/: groundSeg.h
src/: groundSeg.cpp  main.cpp
tests/kitti_campus/kitti_campus_43/: desktop.txt  zybo.txt
tests/kitti_campus/kitti_campus_45/: desktop.txt  zybo.txt
tests/kitti_campus/kitti_campus_47/: desktop.txt  zybo.txt
tests/kitti_city/kitti_city_2/: desktop.txt  zybo.txt
tests/kitti_city/kitti_city_48/: desktop.txt  zybo.txt
tests/kitti_city/kitti_city_5/: desktop.txt  zybo.txt
tests/kitti_residential/kitti_residential_35/: desktop.txt  zybo.txt
tests/kitti_residential/kitti_residential_46/: desktop.txt  zybo.txt
tests/kitti_residential/kitti_residential_79/: desktop.txt  zybo.txt
tests/kitti_road/kitti_road_16/: desktop.txt  zybo.txt
tests/kitti_road/kitti_road_27/: desktop.txt  zybo.txt
tests/kitti_road/kitti_road_52/: desktop.txt  zybo.txt
